--- a/public/act1/index.html
+++ b/public/act1/index.html
@@ -23,10 +23,10 @@
     <meta itemprop="wordCount" content="55">
     <title>Act 1 :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/index.xml" rel="alternate" type="application/rss+xml" title="Act 1 :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766506892" rel="stylesheet">
-    <link href="/css/theme.css?1766506892" rel="stylesheet">
-    <link href="/css/format-html.css?1766506892" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766509179" rel="stylesheet">
+    <link href="/css/theme.css?1766509179" rel="stylesheet">
+    <link href="/css/format-html.css?1766509179" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -132,8 +132,8 @@
 <blockquote>
 <p>The Counter Hack crew is in the Neighborhood festively preparing for the holidays when they are suddenly overrun by lively Gnomes in Your Home! There must have been some magic in those Gnomes, because, due to some unseen spark, some haunting hocus pocus, they have come to life and are now scurrying around the Neighborhood.</p>
 </blockquote>
-<p><a href="#R-image-fa5265b0760a32fedf3cf0d600e312a5" class="lightbox-link"><img alt="Act 1 - We are going somewhere" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-fa5265b0760a32fedf3cf0d600e312a5"><img alt="Act 1 - We are going somewhere" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-2.png"></a></p>
+<p><a href="#R-image-8e85835c4f814de5c19efc036f319311" class="lightbox-link"><img alt="Act 1 - We are going somewhere" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8e85835c4f814de5c19efc036f319311"><img alt="Act 1 - We are going somewhere" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-2.png"></a></p>
 
   <footer class="footline">
               <i class='fa-fw fas fa-calendar'></i> Dec 23, 2025
@@ -189,6 +189,7 @@
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
+            <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -206,8 +207,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766506892" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766506892" defer></script>
-    <script src="/js/theme.js?1766506892" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766509179" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766509179" defer></script>
+    <script src="/js/theme.js?1766509179" defer></script>
   </body>
 </html>
