--- a/public/act2/index.html
+++ b/public/act2/index.html
@@ -23,10 +23,10 @@
     <meta itemprop="wordCount" content="12">
     <title>Act 2 :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act2/index.xml" rel="alternate" type="application/rss+xml" title="Act 2 :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766506892" rel="stylesheet">
-    <link href="/css/theme.css?1766506892" rel="stylesheet">
-    <link href="/css/format-html.css?1766506892" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766509179" rel="stylesheet">
+    <link href="/css/theme.css?1766509179" rel="stylesheet">
+    <link href="/css/format-html.css?1766509179" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -132,8 +132,8 @@
 <blockquote>
 <p>The Gnomes’ nefarious plot seems to involve stealing refrigerator parts. But why?</p>
 </blockquote>
-<p><a href="#R-image-4397e4cc007a96e68a1c4b7770ed41a2" class="lightbox-link"><img alt="Act 2 - Are we there yet?" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4397e4cc007a96e68a1c4b7770ed41a2"><img alt="Act 2 - Are we there yet?" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-3.png"></a></p>
+<p><a href="#R-image-46b7e52b784d271cf4ede635ae0a29ac" class="lightbox-link"><img alt="Act 2 - Are we there yet?" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-46b7e52b784d271cf4ede635ae0a29ac"><img alt="Act 2 - Are we there yet?" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-3.png"></a></p>
 
   <footer class="footline">
               <i class='fa-fw fas fa-calendar'></i> Dec 23, 2025
@@ -185,6 +185,7 @@
             <li class="" data-nav-url="/act2/going-in-reverse/index.html"><a class="padding" href="/act2/going-in-reverse/index.html">Going in Reverse</a></li></ul></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
+            <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -202,8 +203,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766506892" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766506892" defer></script>
-    <script src="/js/theme.js?1766506892" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766509179" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766509179" defer></script>
+    <script src="/js/theme.js?1766509179" defer></script>
   </body>
 </html>
