--- a/public/act3/snowcat-rce-and-priv-esc/index.html
+++ b/public/act3/snowcat-rce-and-priv-esc/index.html
@@ -27,10 +27,10 @@ I love all things testing and QA, maintaining systems, logistics, and helping ou
     <meta itemprop="wordCount" content="1550">
     <title>Snowcat RCE &amp; Priv Esc :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/snowcat-rce-and-priv-esc/index.xml" rel="alternate" type="application/rss+xml" title="Snowcat RCE &amp; Priv Esc :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766506892" rel="stylesheet">
-    <link href="/css/theme.css?1766506892" rel="stylesheet">
-    <link href="/css/format-html.css?1766506892" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766509179" rel="stylesheet">
+    <link href="/css/theme.css?1766509179" rel="stylesheet">
+    <link href="/css/format-html.css?1766509179" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -479,6 +479,7 @@ flowchart LR
             <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
             <li class="" data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
             <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
+            <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -496,22 +497,22 @@ flowchart LR
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/js-yaml/js-yaml.min.js?1766506892" defer></script>
-    <script src="/js/d3/d3-color.min.js?1766506892" defer></script>
-    <script src="/js/d3/d3-dispatch.min.js?1766506892" defer></script>
-    <script src="/js/d3/d3-drag.min.js?1766506892" defer></script>
-    <script src="/js/d3/d3-ease.min.js?1766506892" defer></script>
-    <script src="/js/d3/d3-interpolate.min.js?1766506892" defer></script>
-    <script src="/js/d3/d3-selection.min.js?1766506892" defer></script>
-    <script src="/js/d3/d3-timer.min.js?1766506892" defer></script>
-    <script src="/js/d3/d3-transition.min.js?1766506892" defer></script>
-    <script src="/js/d3/d3-zoom.min.js?1766506892" defer></script>
-    <script src="/js/mermaid/mermaid.min.js?1766506892" defer></script>
+    <script src="/js/js-yaml/js-yaml.min.js?1766509179" defer></script>
+    <script src="/js/d3/d3-color.min.js?1766509179" defer></script>
+    <script src="/js/d3/d3-dispatch.min.js?1766509179" defer></script>
+    <script src="/js/d3/d3-drag.min.js?1766509179" defer></script>
+    <script src="/js/d3/d3-ease.min.js?1766509179" defer></script>
+    <script src="/js/d3/d3-interpolate.min.js?1766509179" defer></script>
+    <script src="/js/d3/d3-selection.min.js?1766509179" defer></script>
+    <script src="/js/d3/d3-timer.min.js?1766509179" defer></script>
+    <script src="/js/d3/d3-transition.min.js?1766509179" defer></script>
+    <script src="/js/d3/d3-zoom.min.js?1766509179" defer></script>
+    <script src="/js/mermaid/mermaid.min.js?1766509179" defer></script>
     <script>
       window.relearn.themeUseMermaid = JSON.parse("{}");
     </script>
-    <script src="/js/clipboard/clipboard.min.js?1766506892" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766506892" defer></script>
-    <script src="/js/theme.js?1766506892" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766509179" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766509179" defer></script>
+    <script src="/js/theme.js?1766509179" defer></script>
   </body>
 </html>
