--- a/public/act1/blob-storage-challenge-in-the-neighborhood/index.html
+++ b/public/act1/blob-storage-challenge-in-the-neighborhood/index.html
@@ -31,10 +31,10 @@ You’ve been asked to audit their storage security configuration to ensure no s
     <meta itemprop="wordCount" content="890">
     <title>Blob Storage Challenge in the Neighborhood :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/blob-storage-challenge-in-the-neighborhood/index.xml" rel="alternate" type="application/rss+xml" title="Blob Storage Challenge in the Neighborhood :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766506892" rel="stylesheet">
-    <link href="/css/theme.css?1766506892" rel="stylesheet">
-    <link href="/css/format-html.css?1766506892" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766507765" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766507765" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766507765" rel="stylesheet">
+    <link href="/css/theme.css?1766507765" rel="stylesheet">
+    <link href="/css/format-html.css?1766507765" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -504,6 +504,7 @@ In older accounts or older tooling, this could mean plaintext at rest.</p>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
+            <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About</a></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -521,8 +522,8 @@ In older accounts or older tooling, this could mean plaintext at rest.</p>
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766506892" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766506892" defer></script>
-    <script src="/js/theme.js?1766506892" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766507765" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766507765" defer></script>
+    <script src="/js/theme.js?1766507765" defer></script>
   </body>
 </html>
