--- a/public/act1/its-all-about-defang/index.html
+++ b/public/act1/its-all-about-defang/index.html
@@ -27,10 +27,10 @@ I’m also the President of the SANS Technology Institute College, which has ove
     <meta itemprop="wordCount" content="700">
     <title>Its All About Defang :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/its-all-about-defang/index.xml" rel="alternate" type="application/rss+xml" title="Its All About Defang :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506689" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506689" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766506689" rel="stylesheet">
-    <link href="/css/theme.css?1766506689" rel="stylesheet">
-    <link href="/css/format-html.css?1766506689" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766509179" rel="stylesheet">
+    <link href="/css/theme.css?1766509179" rel="stylesheet">
+    <link href="/css/format-html.css?1766509179" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -305,6 +305,7 @@ I’m also the President of the SANS Technology Institute College, which has ove
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
+            <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -322,8 +323,8 @@ I’m also the President of the SANS Technology Institute College, which has ove
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766506689" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766506689" defer></script>
-    <script src="/js/theme.js?1766506689" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766509179" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766509179" defer></script>
+    <script src="/js/theme.js?1766509179" defer></script>
   </body>
 </html>
