--- a/public/act3/gnome-tea/index.html
+++ b/public/act3/gnome-tea/index.html
@@ -27,10 +27,10 @@ What do you mean ‘weird accent’? I have no idea why people keep telling me t
     <meta itemprop="wordCount" content="1198">
     <title>Gnome Tea :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/gnome-tea/index.xml" rel="alternate" type="application/rss+xml" title="Gnome Tea :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766506892" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766506892" rel="stylesheet">
-    <link href="/css/theme.css?1766506892" rel="stylesheet">
-    <link href="/css/format-html.css?1766506892" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766509179" rel="stylesheet">
+    <link href="/css/theme.css?1766509179" rel="stylesheet">
+    <link href="/css/format-html.css?1766509179" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -392,6 +392,7 @@ What do you mean ‘weird accent’? I have no idea why people keep telling me t
             <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
             <li class="" data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
             <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
+            <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -409,8 +410,8 @@ What do you mean ‘weird accent’? I have no idea why people keep telling me t
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766506892" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766506892" defer></script>
-    <script src="/js/theme.js?1766506892" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766509179" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766509179" defer></script>
+    <script src="/js/theme.js?1766509179" defer></script>
   </body>
 </html>
