--- a/public/act2/index.html
+++ b/public/act2/index.html
@@ -23,10 +23,10 @@
     <meta itemprop="wordCount" content="103">
     <title>Act 2 :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act2/index.xml" rel="alternate" type="application/rss+xml" title="Act 2 :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767538245" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767538245" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767538245" rel="stylesheet">
-    <link href="/css/theme.css?1767538245" rel="stylesheet">
-    <link href="/css/format-html.css?1767538245" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767539554" rel="stylesheet">
+    <link href="/css/theme.css?1767539554" rel="stylesheet">
+    <link href="/css/format-html.css?1767539554" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -109,7 +109,7 @@
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act1/owner/index.html" title="Owner (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/index.html" title="Sans Holiday Hack Challenge 2025 - Introduction (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><a href="/act2/retro-recovery/index.html" title="Retro Recovery (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
@@ -135,8 +135,8 @@
 
 <h1 id="act-2">Act 2</h1>
 
-<p><a href="#R-image-998d1f2f685a3579a2eecb7c535315b0" class="lightbox-link"><img alt="Act 2 - Are we there yet?" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-998d1f2f685a3579a2eecb7c535315b0"><img alt="Act 2 - Are we there yet?" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-3.png"></a></p>
+<p><a href="#R-image-6d9e503d63bafd5c0a7ec53e6e1b2e0e" class="lightbox-link"><img alt="Act 2 - Are we there yet?" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6d9e503d63bafd5c0a7ec53e6e1b2e0e"><img alt="Act 2 - Are we there yet?" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-3.png"></a></p>
 <h2 id="act-2--applied-analysis-and-controlled-exploitation">Act 2 – Applied Analysis and Controlled Exploitation</h2>
 <p>Act 2 shifts from observation to active analysis across multiple domains, including email infrastructure, web applications, identity systems, and network devices. The challenges require moving between tools, protocols, and abstractions while maintaining control over scope and intent. The difficulty increase is driven less by technical complexity and more by the need to correlate information across layers. This act reflects day-to-day defensive and offensive security work, where insight comes from stitching together partial truths rather than exploiting a single flaw in isolation.</p>
 <h2 id="the-story">The Story</h2>
@@ -183,8 +183,7 @@
       <div id="R-content-wrapper" class="highlightable">
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
-            <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
-            <li class="active parent " data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu">
+            <li class="active parent hidden " data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu">
             <li class="" data-nav-url="/act2/retro-recovery/index.html"><a class="padding" href="/act2/retro-recovery/index.html">Retro Recovery</a></li>
             <li class="" data-nav-url="/act2/mail-detective/index.html"><a class="padding" href="/act2/mail-detective/index.html">Mail Detective</a></li>
             <li class="" data-nav-url="/act2/idorable-bistro/index.html"><a class="padding" href="/act2/idorable-bistro/index.html">Idorable Bistro</a></li>
@@ -192,8 +191,6 @@
             <li class="" data-nav-url="/act2/rogue-gnome-identity-provider/index.html"><a class="padding" href="/act2/rogue-gnome-identity-provider/index.html">Rogue Gnome Identity Provider</a></li>
             <li class="" data-nav-url="/act2/quantognome-leap/index.html"><a class="padding" href="/act2/quantognome-leap/index.html">Quantognome Leap</a></li>
             <li class="" data-nav-url="/act2/going-in-reverse/index.html"><a class="padding" href="/act2/going-in-reverse/index.html">Going in Reverse</a></li></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
             <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
@@ -212,8 +209,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1767538245" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767538245" defer></script>
-    <script src="/js/theme.js?1767538245" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1767539554" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767539554" defer></script>
+    <script src="/js/theme.js?1767539554" defer></script>
   </body>
 </html>
