--- a/public/act1/index.html
+++ b/public/act1/index.html
@@ -23,10 +23,10 @@
     <meta itemprop="wordCount" content="130">
     <title>Act 1 :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/index.xml" rel="alternate" type="application/rss+xml" title="Act 1 :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767538340" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767538340" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767538340" rel="stylesheet">
-    <link href="/css/theme.css?1767538340" rel="stylesheet">
-    <link href="/css/format-html.css?1767538340" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767539554" rel="stylesheet">
+    <link href="/css/theme.css?1767539554" rel="stylesheet">
+    <link href="/css/format-html.css?1767539554" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -134,8 +134,8 @@
 
 <h1 id="act-1">Act 1</h1>
 
-<p><a href="#R-image-6af977596e35d359b5296e39ae9c7c87" class="lightbox-link"><img alt="Act 1 - We are going somewhere" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6af977596e35d359b5296e39ae9c7c87"><img alt="Act 1 - We are going somewhere" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-2.png"></a></p>
+<p><a href="#R-image-01360db1a5a1c0cfd485652488b0f080" class="lightbox-link"><img alt="Act 1 - We are going somewhere" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-01360db1a5a1c0cfd485652488b0f080"><img alt="Act 1 - We are going somewhere" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-2.png"></a></p>
 <h1 id="act-1--foundations-and-observation">Act 1 – Foundations and Observation</h1>
 <p>Act 1 focuses on establishing core mental models rather than exploiting edge cases. The challenges emphasize how systems communicate, how data moves across boundaries, and how small configuration details influence security outcomes. Difficulty remains low, but the act trains disciplined observation and protocol literacy rather than trial-and-error problem solving. This mirrors real-world security work where understanding normal behavior is a prerequisite for detecting abnormal or malicious activity.</p>
 <h2 id="the-story">The Story</h2>
@@ -182,7 +182,7 @@
       <div id="R-content-wrapper" class="highlightable">
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
-            <li class="active parent " data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu">
+            <li class="active parent hidden " data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu">
             <li class="" data-nav-url="/act1/holiday-hack-orientation/index.html"><a class="padding" href="/act1/holiday-hack-orientation/index.html">Holiday Hack Orientation</a></li>
             <li class="" data-nav-url="/act1/its-all-about-defang/index.html"><a class="padding" href="/act1/its-all-about-defang/index.html">Its All About Defang</a></li>
             <li class="" data-nav-url="/act1/neighborhood-watch-bypass/index.html"><a class="padding" href="/act1/neighborhood-watch-bypass/index.html">Neighborhood Watch Bypass</a></li>
@@ -194,9 +194,6 @@
             <li class="" data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
             <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
-            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
             <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
@@ -215,8 +212,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1767538340" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767538340" defer></script>
-    <script src="/js/theme.js?1767538340" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1767539554" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767539554" defer></script>
+    <script src="/js/theme.js?1767539554" defer></script>
   </body>
 </html>
