--- a/public/act2/quantognome-leap/index.html
+++ b/public/act2/quantognome-leap/index.html
@@ -39,10 +39,10 @@ Check back with me later - I might have something for you to help with!">
     <meta itemprop="wordCount" content="404">
     <title>Quantognome Leap :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act2/quantognome-leap/index.xml" rel="alternate" type="application/rss+xml" title="Quantognome Leap :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767538340" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767538340" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767538340" rel="stylesheet">
-    <link href="/css/theme.css?1767538340" rel="stylesheet">
-    <link href="/css/format-html.css?1767538340" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767539554" rel="stylesheet">
+    <link href="/css/theme.css?1767539554" rel="stylesheet">
+    <link href="/css/format-html.css?1767539554" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -277,8 +277,7 @@ Check back with me later - I might have something for you to help with!">
       <div id="R-content-wrapper" class="highlightable">
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
-            <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
-            <li class="parent " data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu">
+            <li class="parent hidden " data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu">
             <li class="" data-nav-url="/act2/retro-recovery/index.html"><a class="padding" href="/act2/retro-recovery/index.html">Retro Recovery</a></li>
             <li class="" data-nav-url="/act2/mail-detective/index.html"><a class="padding" href="/act2/mail-detective/index.html">Mail Detective</a></li>
             <li class="" data-nav-url="/act2/idorable-bistro/index.html"><a class="padding" href="/act2/idorable-bistro/index.html">Idorable Bistro</a></li>
@@ -286,8 +285,6 @@ Check back with me later - I might have something for you to help with!">
             <li class="" data-nav-url="/act2/rogue-gnome-identity-provider/index.html"><a class="padding" href="/act2/rogue-gnome-identity-provider/index.html">Rogue Gnome Identity Provider</a></li>
             <li class="active " data-nav-url="/act2/quantognome-leap/index.html"><a class="padding" href="/act2/quantognome-leap/index.html">Quantognome Leap</a></li>
             <li class="" data-nav-url="/act2/going-in-reverse/index.html"><a class="padding" href="/act2/going-in-reverse/index.html">Going in Reverse</a></li></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
             <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
@@ -306,8 +303,8 @@ Check back with me later - I might have something for you to help with!">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1767538340" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767538340" defer></script>
-    <script src="/js/theme.js?1767538340" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1767539554" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767539554" defer></script>
+    <script src="/js/theme.js?1767539554" defer></script>
   </body>
 </html>
