--- a/public/act3/index.html
+++ b/public/act3/index.html
@@ -23,10 +23,10 @@
     <meta itemprop="wordCount" content="137">
     <title>Act 3 :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act3/index.xml" rel="alternate" type="application/rss+xml" title="Act 3 :: SANS Holiday Hack Challenge 2025">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767538340" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767538340" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767538340" rel="stylesheet">
-    <link href="/css/theme.css?1767538340" rel="stylesheet">
-    <link href="/css/format-html.css?1767538340" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1767539554" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1767539554" rel="stylesheet">
+    <link href="/css/theme.css?1767539554" rel="stylesheet">
+    <link href="/css/format-html.css?1767539554" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -109,7 +109,7 @@
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act2/going-in-reverse/index.html" title="Going in Reverse (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/index.html" title="Sans Holiday Hack Challenge 2025 - Introduction (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><a href="/act3/gnome-tea/index.html" title="Gnome Tea (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
@@ -135,8 +135,8 @@
 
 <h1 id="act-3">Act 3</h1>
 
-<p><a href="#R-image-1cc74f74fde9727c84c5e43323b806f2" class="lightbox-link"><img alt="Act 3 - A happy little mistake" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1cc74f74fde9727c84c5e43323b806f2"><img alt="Act 3 - A happy little mistake" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-4.png"></a></p>
+<p><a href="#R-image-9a2e0030b3b5e3725ac96ed329421a92" class="lightbox-link"><img alt="Act 3 - A happy little mistake" class="lazy lightbox figure-image" loading="lazy" src="/images/arts/art-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9a2e0030b3b5e3725ac96ed329421a92"><img alt="Act 3 - A happy little mistake" class="lazy lightbox lightbox-image" loading="lazy" src="/images/arts/art-4.png"></a></p>
 <h2 id="act-3--integration-depth-and-decision-making">Act 3 – Integration, Depth, and Decision-Making</h2>
 <p>Act 3 emphasizes depth, ambiguity, and integration of skills developed earlier. The challenges require comfort with uncertainty, careful reading of instructions, and deliberate sequencing of actions across hardware, software, and application layers. Mistakes are more costly, and brute force approaches are actively punished. This act aligns closely with real-world incidents and complex assessments, where success depends on restraint, planning, and understanding when not to act.</p>
 <h2 id="the-story">The Story</h2>
@@ -184,9 +184,7 @@
       <div id="R-content-wrapper" class="highlightable">
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
-            <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
-            <li class="active parent " data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu">
+            <li class="active parent hidden " data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu">
             <li class="" data-nav-url="/act3/gnome-tea/index.html"><a class="padding" href="/act3/gnome-tea/index.html">Gnome Tea</a></li>
             <li class="" data-nav-url="/act3/hack-a-gnome/index.html"><a class="padding" href="/act3/hack-a-gnome/index.html">Hack-a-Gnome</a></li>
             <li class="" data-nav-url="/act3/snowcat-rce-and-priv-esc/index.html"><a class="padding" href="/act3/snowcat-rce-and-priv-esc/index.html">Snowcat RCE &amp; Priv Esc</a></li>
@@ -195,7 +193,6 @@
             <li class="" data-nav-url="/act3/on-the-wire/index.html"><a class="padding" href="/act3/on-the-wire/index.html">On the Wire</a></li>
             <li class="" data-nav-url="/act3/free-ski/index.html"><a class="padding" href="/act3/free-ski/index.html">Free Ski</a></li>
             <li class="" data-nav-url="/act3/snowblind-ambush/index.html"><a class="padding" href="/act3/snowblind-ambush/index.html">Snowblind Ambush</a></li></ul></li>
-            <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
             <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
           </ul>
         </div>
@@ -214,8 +211,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1767538340" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767538340" defer></script>
-    <script src="/js/theme.js?1767538340" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1767539554" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1767539554" defer></script>
+    <script src="/js/theme.js?1767539554" defer></script>
   </body>
 </html>
